[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gampa"
version = "0.2.2"
description = "Dstream"
authors = [
    { name = "Henry Asiedu", email = "henry.asiedu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "Henry Asiedu", email = "henry.asiedu@gmail.com" } 
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",  
    "seaborn",
    "scipy",
    "skl2onnx",
    "transformers",
    "onnxruntime",
    "datasets"
]

[project.optional-dependencies]
dev = [
    "gradio"
]

[tool.setuptools]

packages = ["dstream"]