[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dstream"
version = "0.2.6"
description = "Dstream is an ingestion pool base."
authors = [
    { name = "Henry Asiedu", email = "henry.asiedu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "Henry Asiedu", email = "henry.asiedu@gmail.com" } 
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",  
    "seaborn",
    "scipy",
    "skl2onnx",
    "transformers",
    "onnxruntime",
    "datasets",
    "statsmodels"
]

[project.optional-dependencies]
dev = [
    "gradio"
]

[tool.setuptools]

packages = ["dstream"]